added docker build file